experimental/parser/testdata/parser/package/extension.proto.stderr.txt
error: unexpected nested extension path in `package` declaration
  --> testdata/parser/package/extension.proto:3:14
   |
 3 | package test.(extension.path).test;
   |              ^^^^^^^^^^^^^^^^

encountered 1 error
